--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = neighborhoods[1]"
+    "palermo = neighborhoods[0]"
    ]
   },
   {
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "la_boca = neighborhoods"
+    "la_boca = neighborhoods[]"
    ]
   },
   {
